Package: psCBS
==============

Version: 0.9.18 [2010-11-22]
o Added argument 'calls' to plotTracks() for highlighing called regions.
o Updated callAllelicBalanceByDH() and callExtremeAllelicImbalanceByDH()
  to utilize bootstrapTCNandDHByRegion().
o BUG FIX: bootstrapTCNandDHByRegion() for PairedPSCBS would not
  correctly detect if bootstrap results are already available.


Version: 0.9.17 [2010-11-21]
o Now plotTracks() supports tracks "tcn,c1", "tcn,c2" and "c1,c2" too.
o Added support for flavor "tcn&dh" in segmentByPairedPSCBS(), which
  contrary to "tcn,dh" enforces TCN and DH to have the same change
  points.  The default flavor is now "tcn&dh".
o Added argument 'xlim' to plotTracks() making it possible to zoom in.


Version: 0.9.16 [2010-11-21]
o Now joinSegments=TRUE is the default for segmentByCBS() and
  segmentByPairedPSCBS().
o Added argument 'quantiles' to plotTracks(), which if specified
  draws confidence bands previously estimated from bootstrapping.
o Added drawConfidenceBands() for PairedPSCBS.
o Added bootstrapTCNandDHByRegion() for PairedPSCBS.
o Added standalone joinSegments() for CBS results.
o Now segmentByPairedPSCBS() also returns minor and major 
  copy numbers for each segment.


Version: 0.9.15 [2010-11-21]
o Adjusted postsegmentTCN() such that the updated TCN segment boundaries
  are the maximum of the DH segment and the support by the loci.  This
  means that postsegmentTCN() will work as expected both when signals
  where segmented with 'joinSegments' being TRUE or FALSE.
o Updated plotTracks() for PairedPSCBS such that the TCN segmentation
  is colored 'purple' and the DH segmentation 'orange' for TCH and DH
  only tracks.


Version: 0.9.14 [2010-11-20]
o Now it is possible to specify the boundaries of the regions to
  be segmented as known change points via argument 'knownCPs'.
o Added argument 'joinSegments' to segmentByCBS() and 
  segmentByPairedPSCBS() in order to specify if neighboring 
  segments should be joined or not.